miniextendr-macros/tests/ui/impl_r6_private_wrong_system.stderr
error: `private` is only valid for R6 class systems
  --> tests/ui/impl_r6_private_wrong_system.rs:10:23
   |
10 |     #[miniextendr(env(private))]
   |                       ^^^^^^^
